syntax = "proto3";

package greet;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc SendRocket (SendRocketRequest) returns (SendRocketReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message SendRocketRequest {
	string name = 1;
	google.protobuf.Timestamp dateTime = 2;
}

message SendRocketReply {
	bool isSuccess = 1;
}